structmeta-tests/tests/compile_fail/struct_meta/option_bool.stderr
error[E0277]: the trait bound `bool: Parse` is not satisfied
 --> tests/compile_fail/struct_meta/option_bool.rs:3:18
  |
3 |     flag: Option<bool>,
  |                  ^^^^ the trait `Parse` is not implemented for `bool`
  |
  = help: the following other types implement trait `Parse`:
            Abi
            Abstract
            AndAnd
            AndEq
            AngleBracketedGenericArguments
            Arm
            As
            At
          and $N others
note: required by a bound in `ParseBuffer::<'a>::parse`
 --> $CARGO/syn-2.0.4/src/parse.rs
  |
  |     pub fn parse<T: Parse>(&self) -> Result<T> {
  |                     ^^^^^ required by this bound in `ParseBuffer::<'a>::parse`
